--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,22 @@
-body {
-    color: red;
+* {
+    margin: 0;
+    padding: 0;
 }
+
+#container {
+    display: flex;
+    padding: 25px;
+    width: 48px;
+    flex-wrap: wrap;
+}
+
+.gridDiv {
+    min-height: 10px;
+    min-width: 10px;
+    border: 1px solid rgb(104, 104, 104);
+}
+
+.gridHover {
+    background-color: black;
+}
+
