--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,13 +6,11 @@
 #container {
     display: flex;
     padding: 25px;
-    width: 48px;
+    width: 1000px;
     flex-wrap: wrap;
 }
 
-.gridDiv {
-    min-height: 10px;
-    min-width: 10px;
+.gridSquare {
     border: 1px solid rgb(104, 104, 104);
 }
 
